--- a/ks8/env-secret.yaml
+++ b/ks8/env-secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: ZGJwcm9qZWN0Mw==
-  POSTGRES_PASSWORD: ZGJwcm9qZWN0Mw==
+  POSTGRES_USERNAME: cHJvamVjdDN1ZGFncmFt
+  POSTGRES_PASSWORD: cHJvamVjdDN1ZGFncmFt
   JWT_SECRET: dGVzdGluZw==
