--- a/ks8/env-configmap.yaml
+++ b/ks8/env-configmap.yaml
@@ -10,4 +10,4 @@ data:
   AWS_PROFILE: default
   AWS_BUCKET: project-3-s3
 
-  URL: aebca6e34e39547a389da654c0822ffb-558901390.us-east-1.elb.amazonaws.com:8100
+  URL: URL=http://localhost:8080
